* jdk: make built target compatible with JDK 9, as first step of java 9 migration (some of toolchain does not support java 9 yet)